[gd_scene load_steps=12 format=3 uid="uid://wdyxgrma1k2v"]

[ext_resource type="Script" path="res://Scripts/Main.cs" id="1_c6i6j"]
[ext_resource type="Texture2D" uid="uid://dn4rnaq24un4e" path="res://Assets/art/wenrexa/Ð¡ommonElement/Background.jpg" id="2_jpf3h"]
[ext_resource type="Script" path="res://Scripts/UIControl.gd" id="4_4tntm"]
[ext_resource type="Texture2D" uid="uid://l0b26w8axfhx" path="res://Assets/art/kenney/redSheet.png" id="4_bvleg"]
[ext_resource type="Texture2D" uid="uid://bunylms2v7nwa" path="res://Assets/art/kenney/blueSheet.png" id="4_n7fug"]
[ext_resource type="Texture2D" uid="uid://dc2jbmce71p18" path="res://Assets/art/kenney/yellowSheet.png" id="5_pb5rx"]
[ext_resource type="Script" path="res://Scripts/UI_StoreGrid.gd" id="6_p6lvn"]
[ext_resource type="PackedScene" uid="uid://2t00lxnlt7dw" path="res://scenes/tool_button.tscn" id="6_vmjye"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_gdqkv"]
panorama = ExtResource("2_jpf3h")

[sub_resource type="Sky" id="Sky_uky6q"]
sky_material = SubResource("PanoramaSkyMaterial_gdqkv")

[sub_resource type="Environment" id="Environment_j67e7"]
background_mode = 2
sky = SubResource("Sky_uky6q")
sky_custom_fov = 90.0

[node name="Main" type="Node3D" node_paths=PackedStringArray("mainCamera")]
script = ExtResource("1_c6i6j")
mainCamera = NodePath("CamParent/Camera3D")
keyboardCameraSpeed = 12.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_4tntm")

[node name="description_box" type="NinePatchRect" parent="UI"]
layout_mode = 2
anchor_top = 0.831741
anchor_right = 0.104938
anchor_bottom = 1.00013
offset_top = -0.28007
offset_right = -0.48003
offset_bottom = 1.85986
grow_vertical = 0
texture = ExtResource("4_n7fug")
region_rect = Rect2(0, 0, 190, 49)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="description_text" type="RichTextLabel" parent="UI/description_box"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Standard, Burning"
metadata/_edit_use_anchors_ = true

[node name="Components" type="HBoxContainer" parent="UI/description_box"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 38.0
offset_right = 207.0
offset_bottom = -5.0
grow_vertical = 0

[node name="component" type="NinePatchRect" parent="UI/description_box/Components"]
visible = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
texture = ExtResource("4_bvleg")
region_rect = Rect2(0, 0, 190, 49)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="description_text" type="RichTextLabel" parent="UI/description_box/Components/component"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.213333
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/normal_font_size = 15
text = "Standard, Burning"
metadata/_edit_use_anchors_ = true

[node name="name_text" type="RichTextLabel" parent="UI/description_box/Components/component"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.34
offset_left = 5.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Heat Sink"
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="store_box" type="NinePatchRect" parent="UI"]
layout_mode = 2
anchor_left = 0.892
anchor_top = 0.83
anchor_right = 0.997338
anchor_bottom = 0.998605
offset_left = 0.999951
offset_top = -5.57899e-05
offset_right = -0.48003
offset_bottom = 1.85986
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_pb5rx")
region_rect = Rect2(0, 0, 190, 49)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="store_grid" type="GridContainer" parent="UI/store_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 14.0
offset_right = -10.865
offset_bottom = -22.0458
grow_horizontal = 2
grow_vertical = 2
columns = 4
script = ExtResource("6_p6lvn")

[node name="tooltip" type="NinePatchRect" parent="UI"]
z_index = 5
layout_mode = 2
anchor_left = 0.2076
anchor_top = 0.487908
anchor_right = 0.312592
anchor_bottom = 0.566262
offset_top = -0.28007
offset_right = -0.48003
offset_bottom = 1.85986
grow_vertical = 0
texture = ExtResource("4_n7fug")
region_rect = Rect2(0, 0, 190, 49)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="description" type="RichTextLabel" parent="UI/tooltip"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 6.0
offset_right = -5.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Standard, Burning"
metadata/_edit_use_anchors_ = true

[node name="name" type="RichTextLabel" parent="UI/tooltip"]
clip_contents = false
layout_mode = 2
anchor_left = 1.94848
anchor_top = -3.35028
anchor_right = 1.99048
anchor_bottom = -3.31228
offset_left = -504.503
offset_top = 308.429
offset_right = -457.507
offset_bottom = 332.477
grow_vertical = 0
pivot_offset = Vector2(-6, 0)
theme_override_colors/default_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/normal_font_size = 20
text = "NODE"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="UI/tooltip/name"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -1.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_n7fug")
region_rect = Rect2(0, 143, 190, 49)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 20

[node name="cost" type="RichTextLabel" parent="UI/tooltip"]
clip_contents = false
layout_mode = 2
anchor_left = 2.65077
anchor_top = -3.35028
anchor_right = 2.69277
anchor_bottom = -3.31228
offset_left = -504.503
offset_top = 308.429
offset_right = -457.507
offset_bottom = 332.477
grow_vertical = 0
pivot_offset = Vector2(-6, 0)
theme_override_colors/default_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/normal_font_size = 20
text = "NODE"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="UI/tooltip/cost"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -1.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_n7fug")
region_rect = Rect2(0, 143, 190, 49)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 20

[node name="name_text" type="RichTextLabel" parent="UI"]
clip_contents = false
layout_mode = 2
anchor_left = 0.0015625
anchor_top = 0.788185
anchor_right = 0.0435625
anchor_bottom = 0.826185
offset_left = 11.0
offset_top = -0.240023
offset_right = -2.64001
offset_bottom = -7.28007
grow_vertical = 0
pivot_offset = Vector2(-6, 0)
theme_override_colors/default_color = Color(0.278431, 0.278431, 0.278431, 1)
theme_override_font_sizes/normal_font_size = 20
text = "NODE"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="UI/name_text"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -1.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_n7fug")
region_rect = Rect2(0, 143, 190, 49)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="credits" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.001
anchor_right = 0.198708
anchor_bottom = 0.0425926
offset_left = 17.0
offset_top = -0.08
offset_right = 0.47998
theme_override_font_sizes/font_size = 30
text = "CR: 1000"
metadata/_edit_use_anchors_ = true

[node name="data" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0491481
anchor_right = 0.198708
anchor_bottom = 0.0907407
offset_left = 17.0
offset_top = -0.08
offset_right = 0.47998
theme_override_font_sizes/font_size = 30
text = "D: 0"
metadata/_edit_use_anchors_ = true

[node name="heat" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.112111
anchor_right = 0.198708
anchor_bottom = 0.153704
offset_left = 17.0
offset_top = -0.08
offset_right = 0.47998
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0/50"
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="HBoxContainer" parent="UI"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.239
anchor_top = 0.975
anchor_right = 0.705208
anchor_bottom = 0.975
offset_left = 0.119995
offset_top = -77.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ToolButton" parent="UI/Buttons" instance=ExtResource("6_vmjye")]
visible = false
layout_mode = 2

[node name="CamParent" type="Node3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 2.4663e-16, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CamParent"]
transform = Transform3D(-1, 7.89344e-08, 2.12452e-08, -3.78739e-09, -4.99398e-08, 1, 8.24218e-08, 1, 2.50917e-08, 1.77228e-06, 21, -1.10821e-06)
environment = SubResource("Environment_j67e7")
projection = 1
current = true
size = 20.0

[node name="Sprite3D" type="Sprite3D" parent="CamParent/Camera3D"]
transform = Transform3D(1, -5.96046e-08, -2.98023e-08, 2.98023e-08, 1, 0, -2.98023e-08, -1.19209e-07, 1, 2.14577e-06, -2.6226e-06, -47)
visible = false
render_priority = -50
texture = ExtResource("2_jpf3h")
